@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActivationExceptionTests.cs" />
     <Compile Include="AssertThat.cs" />
     <Compile Include="GetServiceTests.cs" />
     <Compile Include="CyclicDependencyValidatorTests.cs" />
